<resources>

    <string name="app_name">cateye</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_look_photos">LookPhotos</string>
    <string name="title_activity_set_menu">SetMenu</string>
    <string name="title_activity_scan_menu">ScanMenu</string>
    <string name="smart_contorl_string">智能监控</string>
    <string name="scan_photo_string">照片</string>
    <string name="scan_video_string">视频</string>
    <string name="scan_setmenu_string">设置</string>
    <string name="smart_pir_string">智能人体侦测</string>
    <string name="smart_alarm_time_string">智能报警时间</string>
    <string name="Monitoring_sensitivity_string">监控灵敏度</string>
    <string name="Automatic_alarm_bell_string">自动报警铃声</string>
    <string name="vol_set_string">音量</string>
    <string name="talk_photo_string">连拍</string>
    <string name="leave_recoder_mode_string">"留言模式"</string>
    <string name="leave_recoder_mode_voices_string">"音频"</string>
    <string name="leave_recoder_mode_video_string">"视频"</string>
    <string name="but_config_string">确认</string>
    <string name="but_cancel_string">取消</string>
    <string name="sensitivity_high_string">高</string>
    <string name="sensitivity_middle_string">中</string>
    <string name="sensitivity_low_string">低</string>
    <string name="alarm_bell_string">铃声</string>
    <string name="talk_photo_set_string">连拍设置:</string>
    <string name="talk_photo_mode_string">连拍模式</string>
    <string name="talk_photo_picture_string">拍照</string>
    <string name="talk_photo_recoderVideo_string">录像</string>
    <string name="talk_photo_num_string">连拍张数:</string>
    <string name="recoderTime_string">录制时间:</string>
    <string name="talk_photo_once_string">1张</string>
    <string name="talk_photo_three_string">3张</string>
    <string name="talk_photo_five_string">5张</string>
    <string name="talk_video_once_string">1s</string>
    <string name="talk_video_three_string">3s</string>
    <string name="talk_video_five_string">5s</string>
    <string name="backMenu_string">返回</string>
    <string name="delete_string">删除</string>
    <string name="select_all_string">选择全部</string>
    <string name="discancel_all_string">取消全部</string>
    <string name="set_Menu_string">系统设置</string>
    <string name="display_string">显示</string>
    <string name="screen_light_string">屏幕亮度</string>
    <string name="screen_close_timeout_string">屏幕超时</string>
    <string name="screen_close_time_15s_string">15 秒</string>
    <string name="screen_close_time_30s_string">30 秒</string>
    <string name="screen_close_time_45s_string">45 秒</string>
    <string name="screen_close_time_1min_string">1分钟</string>
    <string name="Desktop_Wallpaper_string">桌面壁纸</string>
    <string name="scan_desktop_picture_string">浏览</string>
    <string name="camera_Set_string">摄像头设置</string>
    <string name="Light_sensitivity_string">智能补光灵敏度</string>
    <string name="Light_sensitivity_high_string">高</string>
    <string name="Light_sensitivity_middle_string">中</string>
    <string name="Light_sensitivity_low_string">低</string>
    <string name="light_hz_string">光源频率</string>
    <string name="hz_string">hz</string>
    <string name="Scan_QR_Code_string">扫描二维码 </string>
    <string name="set_bell_string">门铃设置 </string>
    <string name="bell_select_string">门铃铃声 </string>
    <string name="bell_led_string">门铃灯 </string>
    <string name="power_set_menu_string">节能模式设置 </string>
    <string name="power_set_string">节能模式 </string>
    <string name="system_time_set_string">时间日期 </string>
    <string name="get_network_time_string">获取网络时间</string>
    <string name="set_system_time_string">设置时间</string>
    <string name="seclet_city_time_string">选择时区</string>
    <string name="language_string">语言 </string>
    <string name="language_en_string">英文 </string>
    <string name="language_cn_string">中文 </string>
    <string name="set_wifi_menu_string">Wi-Fi </string>
    <string name="set_smart_lock">智能门锁 </string>
    <string name="Add_smart_lock">添加门锁 </string>
    <string name="Delete_smart_lock">删除门锁 </string>
    <string name="storage_string">存储 </string>
    <string name="storage_total_string">总容量:   </string>
    <string name="storage_space_string">剩余空间:   </string>
    <string name="Format_memory_card">格式化存储卡 </string>
    <string name="Factory_reset_string">恢复出厂设置 </string>
    <string name="Factory_reset_config_string">确定要恢复出厂设置吗？ </string>
    <string name="Firmware_version_string">固件版本 </string>
    <string name="Software_version_string">软件版本 </string>
    <string name="title_activity_external_storage">ExternalStorage</string>
    <string name="title_activity_display_menu">DisplayMenu</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_activity_smart_contorl">SmartContorl</string>
    <string name="time_sec_string">秒</string>
    <string name="time_1sec_string">1秒</string>
    <string name="time_3sec_string">3秒</string>
    <string name="time_5sec_string">5秒</string>
    <string name="time_10sec_string">10秒</string>
    <string name="time_15sec_string">15秒</string>
    <string name="ring_didong_string">叮咚</string>
    <string name="ring_what_string">你是谁啊</string>
    <string name="time_alarm_string">alarm</string>
    <string name="time_dida_string">嘀嗒</string>
    <string name="time_recoder_voices_string">自定义</string>
    <string name="doorring_index1_string">铃声 1</string>
    <string name="doorring_index2_string">铃声 2</string>
    <string name="doorring_index3_string">铃声 3</string>
    <string name="doorring_index4_string">铃声 4</string>
    <string name="doorring_index5_string">铃声 5</string>
    <string name="title_activity_smart_lock_menu">Smart_lock_menu</string>
    <string name="title_activity_ring_set_menu">RingSetMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera_set_menu">CameraSetMenu</string>
    <string name="title_activity_screen_time">ScreenTime</string>

</resources>