<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:paddingRight="10dp" >

       	<Button
        	android:id="@+id/butScreen_backId"
        	android:layout_width="75.0dip"
        	android:text="@string/backMenu_string"
       	 	android:background="@drawable/mm_title_back_btn"
        	android:textColor="@android:color/black"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="2dip" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/screen_close_timeout_string"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioScreenTimeSetId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="3px"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
               	android:textColor="@android:color/black"
                android:text="@string/screen_close_time_15s_string" />

            <RadioButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/screen_close_time_30s_string" />

            <RadioButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/screen_close_time_45s_string" />
 
           	<RadioButton
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/screen_close_time_1min_string" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
