<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/butShow_alarmTime_backId"
            android:layout_width="75.0dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:background="@drawable/mm_title_back_btn"
            android:text="@string/backMenu_string"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_alarm_time_string"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

  

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radioShow_AlarmTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="3px"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_1sec_string"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_3sec_string"
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_5sec_string"
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_10sec_string"
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_15sec_string"
                android:textSize="20sp"
                android:textColor="@android:color/black" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>