<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:paddingRight="10dp" >

       	<Button
        	android:id="@+id/butset_talkpiture_backId"
        	android:layout_width="75.0dip"
        	android:text="@string/backMenu_string"
       	 	android:background="@drawable/mm_title_back_btn"
        	android:textColor="@android:color/black"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="2dip" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/talk_photo_mode_string"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >
            
      	<TextView
        	android:layout_width="wrap_content"
          	android:layout_height="wrap_content"
          	android:textColor="@android:color/black"
           	android:text="@string/talk_photo_set_string"
           	android:textSize="15sp" />
      	<Switch
        	android:layout_width="120dp"
        	android:layout_height="wrap_content"
        	android:id="@+id/SwitchSet_talkpictureId"
        	android:switchMinWidth="20dp"
        	android:paddingLeft="20dp"
        	android:textOn="视频"
        	android:textOff="拍照"
        	android:thumb="@drawable/thumb"
        	android:track="@drawable/track" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textShowSet_talkpictureId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/talk_photo_num_string" />

        <RadioGroup
            android:id="@+id/RadioshowSet_numsId"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_x="3px"
             >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_photo_once_string"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_photo_three_string"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_photo_five_string"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout> 

</LinearLayout>